test/types/tuple/ref/tupleRefReturnFail2.good
tupleRefReturnFail2.chpl:7: In function 'inferReturnType':
tupleRefReturnFail2.chpl:10: error: cannot return tuple containing locals by ref
tupleRefReturnFail2.chpl:8: note: element 0 of type int(64)
tupleRefReturnFail2.chpl:9: note: element 1 of type r
tupleRefReturnFail2.chpl:13: In function 'specifyReturnType':
tupleRefReturnFail2.chpl:16: error: cannot return tuple containing locals by ref
tupleRefReturnFail2.chpl:14: note: element 0 of type int(64)
tupleRefReturnFail2.chpl:15: note: element 1 of type r
